<resources>
    <string name="app_name">a:Dventure</string>

    <!-- Main Menu -->
    <string name="start_button">Play</string>
    <string name="start_desc">Jump right into action</string>
    <string name="statistic_button">Stats</string>
    <string name="statistic_desc">See how much time you\'ve wasted</string>
    <string name="highscore_button">Highscore</string>
    <string name="highscore_desc">Look at the highest players</string>
    <string name="credits_button">Credits</string>
    <string name="credits_desc">Who made all this?</string>
    <string name="help_button">Help</string>
    <string name="help_desc">I don\'t understand any of this</string>


    <!-- InGame -->
    <string name="title_activity_game">Bae &lt;33(Chat title could be random)</string>
    <string name="action_settings">Settings</string>

    <!-- HighScore -->
    <string name="title_activity_high_score">HighScore</string>
    <string name="high_score_default_name">ShyGuy</string>
    <string name="high_score_default_text">didn\'t actually play the game</string>

    <!-- Credits -->
    <string name="title_activity_credits">Credits</string>

    <string name="credits_name1">Jonathan Moerman</string>
    <string name="credits_desc1">Lead Developer and Infrastructure</string>

    <string name="credits_name2">Tom Nijholt</string>
    <string name="credits_desc2">Programming and Motivation</string>

    <string name="credits_name3">Jan Potma</string>
    <string name="credits_desc3">Programming and Adminstration</string>

    <string name="credits_name4">Mathis Sackers</string>
    <string name="credits_desc4">Lead Artist, Code</string>

    <!-- Stats -->
    <string name="title_activity_statistics">Statistics</string>
    <string name="statistic_dummy">Something went wrong</string>

    <string name="statistic_dragon">Dragons slain</string>
    <string name="statistic_snake">Snek kills</string>
    <string name="statistic_horse">Horses beaten to death</string>
    <string name="statistic_wolf">Wolves sliced open</string>
    <string name="statistic_rat">Rats crushed</string>
    <string name="statistic_stage">Total stages cleared</string>
    <string name="statistic_step">Distance walked</string>

    <!-- Help -->
    <string name="title_activity_help">Help</string>
    <string name="help_player_title">Player</string>
    <string name="help_dragon_title">Dragon</string>
    <string name="help_snake_title">Snake</string>
    <string name="help_horse_title">Horse</string>
    <string name="help_wolf_title">Wolf</string>
    <string name="help_rat_title">Rat</string>

    <string name="help_player_text">This is you! Move by tapping\nthe cardinal direction you want to go;\ntap the middle of the screen to wait.</string>
    <string name="help_dragon_text">These fearsome dragons can only\nmove orthogonally.</string>
    <string name="help_snake_text">This hissing snake sneakily switches\nbetween slithering orthogonally\nand diagonally. Watch the tongue!</string>
    <string name="help_horse_text">Horses jump around the board,\nlike in chess.</string>
    <string name="help_wolf_text">Wolves move around orthogonally\nbut try to pounce when near!</string>
    <string name="help_rat_text">These critters only move diagonally,\njust like in real life!</string>

</resources>
