<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#eee"
    tools:context="free.lunch.aDventure.CreditsActivity">

    <LinearLayout
        android:id="@+id/fullscreen_content"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <!-- Team -->
        <!-- Jonathan -->
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="2"
            android:columnCount="2">
            <ImageView
                android:layout_width="@dimen/menu_icon"
                android:layout_height="@dimen/menu_icon"
                android:layout_margin="@dimen/menu_margin"
                android:src="@drawable/play_ic"
                android:layout_rowSpan="2"/>
            <TextView
                android:layout_margin="@dimen/menu_margin"
                android:textSize="@dimen/menu_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:layout_column="1"
                android:layout_row="0"
                android:text="@string/credits_name1"/>
            <TextView
                android:layout_gravity="bottom"
                android:layout_margin="@dimen/menu_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="1"
                android:text="@string/credits_desc1"/>
        </GridLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_marginLeft="@dimen/menu_margin"
            android:layout_marginRight="@dimen/menu_margin"
            android:layout_height="1dp"
            android:background="@color/menu_line" />

        <!-- Tom -->
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="2"
            android:columnCount="2">
            <ImageView
                android:layout_width="@dimen/menu_icon"
                android:layout_height="@dimen/menu_icon"
                android:layout_margin="@dimen/menu_margin"
                android:src="@drawable/play_ic"
                android:layout_rowSpan="2"/>
            <TextView
                android:layout_margin="@dimen/menu_margin"
                android:textSize="@dimen/menu_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:layout_column="1"
                android:layout_row="0"
                android:text="@string/credits_name2"/>
            <TextView
                android:layout_gravity="bottom"
                android:layout_margin="@dimen/menu_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="1"
                android:text="@string/credits_desc2"/>
        </GridLayout>


        <View
            android:layout_width="fill_parent"
            android:layout_marginLeft="@dimen/menu_margin"
            android:layout_marginRight="@dimen/menu_margin"
            android:layout_height="1dp"
            android:background="@color/menu_line" />

        <!-- Jan -->
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="2"
            android:columnCount="2">
            <ImageView
                android:layout_width="@dimen/menu_icon"
                android:layout_height="@dimen/menu_icon"
                android:layout_margin="@dimen/menu_margin"
                android:src="@drawable/play_ic"
                android:layout_rowSpan="2"/>
            <TextView
                android:layout_margin="@dimen/menu_margin"
                android:textSize="@dimen/menu_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:layout_column="1"
                android:layout_row="0"
                android:text="@string/credits_name3"/>
            <TextView
                android:layout_gravity="bottom"
                android:layout_margin="@dimen/menu_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="1"
                android:text="@string/credits_desc3"/>
        </GridLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_marginLeft="@dimen/menu_margin"
            android:layout_marginRight="@dimen/menu_margin"
            android:layout_height="1dp"
            android:background="@color/menu_line" />

        <!-- Mathis -->
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="2"
            android:columnCount="2">
            <ImageView
                android:layout_width="@dimen/menu_icon"
                android:layout_height="@dimen/menu_icon"
                android:layout_margin="@dimen/menu_margin"
                android:src="@drawable/crown_ic"
                android:layout_rowSpan="2"/>
            <TextView
                android:layout_margin="@dimen/menu_margin"
                android:textSize="@dimen/menu_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:layout_column="1"
                android:layout_row="0"
                android:text="@string/credits_name4"/>
            <TextView
                android:layout_gravity="bottom"
                android:layout_margin="@dimen/menu_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="1"
                android:text="@string/credits_desc4"/>
        </GridLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_marginLeft="@dimen/menu_margin"
            android:layout_marginRight="@dimen/menu_margin"
            android:layout_height="1dp"
            android:background="@color/menu_line" />

    </LinearLayout>

</RelativeLayout>
