<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="free.lunch.aDventure.HelpActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/menu_icon"
                    android:layout_height="@dimen/menu_icon"
                    android:layout_margin="@dimen/menu_margin"
                    android:src="@drawable/player" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/menu_margin"
                        android:text="@string/help_player_title"
                        android:textColor="#000"
                        android:textSize="@dimen/menu_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_margin="@dimen/menu_margin"
                        android:text="@string/help_player_text" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/menu_margin"
                android:layout_marginRight="@dimen/menu_margin"
                android:background="@color/menu_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/menu_icon"
                    android:layout_height="@dimen/menu_icon"
                    android:layout_margin="@dimen/menu_margin"
                    android:src="@drawable/rat" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/menu_margin"
                        android:text="@string/help_rat_title"
                        android:textColor="#000"
                        android:textSize="@dimen/menu_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_margin="@dimen/menu_margin"
                        android:text="@string/help_rat_text" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/menu_margin"
                android:layout_marginRight="@dimen/menu_margin"
                android:background="@color/menu_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/menu_icon"
                    android:layout_height="@dimen/menu_icon"
                    android:layout_margin="@dimen/menu_margin"
                    android:src="@drawable/snake" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/menu_margin"
                        android:text="@string/help_snake_title"
                        android:textColor="#000"
                        android:textSize="@dimen/menu_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_margin="@dimen/menu_margin"
                        android:text="@string/help_snake_text" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/menu_margin"
                android:layout_marginRight="@dimen/menu_margin"
                android:background="@color/menu_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/menu_icon"
                    android:layout_height="@dimen/menu_icon"
                    android:layout_margin="@dimen/menu_margin"
                    android:src="@drawable/wolf" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/menu_margin"
                        android:text="@string/help_wolf_title"
                        android:textColor="#000"
                        android:textSize="@dimen/menu_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_margin="@dimen/menu_margin"
                        android:text="@string/help_wolf_text" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/menu_margin"
                android:layout_marginRight="@dimen/menu_margin"
                android:background="@color/menu_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/menu_icon"
                    android:layout_height="@dimen/menu_icon"
                    android:layout_margin="@dimen/menu_margin"
                    android:src="@drawable/dragon" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/menu_margin"
                        android:text="@string/help_dragon_title"
                        android:textColor="#000"
                        android:textSize="@dimen/menu_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_margin="@dimen/menu_margin"
                        android:text="@string/help_dragon_text" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/menu_margin"
                android:layout_marginRight="@dimen/menu_margin"
                android:background="@color/menu_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/menu_icon"
                    android:layout_height="@dimen/menu_icon"
                    android:layout_margin="@dimen/menu_margin"
                    android:src="@drawable/horse" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/menu_margin"
                        android:text="@string/help_horse_title"
                        android:textColor="#000"
                        android:textSize="@dimen/menu_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_margin="@dimen/menu_margin"
                        android:text="@string/help_horse_text" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/menu_margin"
                android:layout_marginRight="@dimen/menu_margin"
                android:background="@color/menu_line" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
